# ApiTest

./: CMakeLists.txt  Main.qml  apiinterface.cpp  apiinterface.h  apireader.cpp  apireader.h  main.cpp  triggerclass.cpp  triggerclass.h
